fix: spacing issues

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   text-align: center;
 }
